# FALCON

./: .env_example  .gitignore  README.md  docker-compose.yaml  mkdocs.yml  nginx.conf  package-lock.json
backend_src/: .gitignore  Dockerfile  pyproject.toml
backend_src/backend/: .env  auth_router.py  auth_utils.py  config.py  db_logger.py  llm_utils.py  main.py  mcp_client.py  models.py
docs/: index.md  openapi.json
docs/api/: backend_api.md  llm_utils.md  mcp_client.md  models.md
docs/architecture/: api_flow.md  system_diagram.md
docs/setup/: local_development.md  testing.md
frontend_src/: .env.local  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json
frontend_src/.next/: _events.json  trace
frontend_src/.next/cache/: config.json
frontend_src/.next/cache/webpack/client-development/: index.pack.gz.old
frontend_src/.next/cache/webpack/server-development/: index.pack.gz.old
frontend_src/.next/server/pages/: _app.js  _error.js  index.js
frontend_src/.next/server/vendor-chunks/: @swc.js  next.js
frontend_src/.next/static/chunks/: webpack.js
frontend_src/.next/static/chunks/pages/: _app.js  index.js
frontend_src/pages/: _app.tsx  config.tsx  index.tsx  login.tsx  register.tsx
frontend_src/shared/: ServersContext.tsx  types.ts
frontend_src/styles/: global.css
frontend_src/utils/: apiClient.ts  auth.ts
mcp_servers/rag_mcp_server/: pyproject.toml
mcp_servers/rag_mcp_server/src/: server.py
